--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "dux",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "./buildEnv.sh"
+    "serve": "nodemon server/server.js",
+    "dev": "./buildEnv.sh",
+    "noterm": "webpack-dev-server --port 4000 --inline --devtool eval --progress --no-info --colors --hot --content-base build/"
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "stage-0",
+      "es2015"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.13.3",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.3.17",
